join category to products
