# models/product.go
@@ -1,8 +1,27 @@
 package models
 
 type Product struct {
-	ID    int    `json:"id"`
-	Name  string `json:"name"`
-	Price int    `json:"price"`
-	Stock int    `json:"stock"`
+	ID         int    `json:"id"`
+	Name       string `json:"name"`
+	Price      int    `json:"price"`
+	Stock      int    `json:"stock"`
+	CategoryID int    `json:"category_id"`
+}
+
+type ProductDetail struct {
+	ID           int    `json:"id"`
+	Name         string `json:"name"`
+	Price        int    `json:"price"`
+	Stock        int    `json:"stock"`
+	CategoryID   int    `json:"category_id"`
+	CategoryName string `json:"category_name"`
+}
+
+type ProductList struct {
+	ID           int    `json:"id"`
+	Name         string `json:"name"`
+	Price        int    `json:"price"`
+	Stock        int    `json:"stock"`
+	CategoryID   int    `json:"category_id"`
+	CategoryName string `json:"category_name"`
 }
